text align mobile fix + statics

--- a/frontend/src/styles/courses-info.css
+++ b/frontend/src/styles/courses-info.css
@@ -85,7 +85,7 @@
         color: white;
         line-height: 1.3;
         margin-bottom: 30px;
-        text-align: justify;
+        text-align: left;
       }
   }
 
